--- a/DataTypes/DataTypes.vcxproj.filters
+++ b/DataTypes/DataTypes.vcxproj.filters
@@ -15,13 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Week_02.cpp">
+    <ClCompile Include="DataTypes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Employee.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="MyMemory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
