--- a/DataTypes2/DataTypes2.vcxproj
+++ b/DataTypes2/DataTypes2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{77fdc019-f938-49a3-9664-4b7d8f553ce2}</ProjectGuid>
-    <RootNamespace>Week02</RootNamespace>
+    <ProjectGuid>{672cb609-d529-4ce9-ac3b-91c19fe602e2}</ProjectGuid>
+    <RootNamespace>DataTypes2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,12 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Employee.cpp" />
-    <ClCompile Include="MyMemory.cpp" />
-    <ClCompile Include="Week_02.cpp" />
+    <ClCompile Include="..\DataTypes\DataTypes.cpp" />
+    <ClCompile Include="..\DataTypes\Employee.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Employee.h" />
+    <ClInclude Include="..\DataTypes\Employee.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
