--- a/Week_04/Week_04.vcxproj
+++ b/Week_04/Week_04.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{77fdc019-f938-49a3-9664-4b7d8f553ce2}</ProjectGuid>
-    <RootNamespace>Week02</RootNamespace>
+    <ProjectGuid>{2c0e8a43-7f86-40f7-b2cf-122206b99751}</ProjectGuid>
+    <RootNamespace>Week04</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,12 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Employee.cpp" />
-    <ClCompile Include="MyMemory.cpp" />
-    <ClCompile Include="Week_02.cpp" />
+    <ClCompile Include="Person.cpp" />
+    <ClCompile Include="Week_04.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Employee.h" />
+    <ClInclude Include="Person.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
